# drim2p

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  STRUCTURE.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: release.yaml
docs/: index.md  typical-workflow.md
docs/tutorials/: conversion-to-hdf5.md  dff-calculation.md  index.md  motion-correction.md  roi-drawing.md  signal-extraction-and-decontamination.md
reference/: index.html
reference/API/SUMMARY/: index.html
reference/API/drim2p/: index.html
reference/API/drim2p/cli_utils/: index.html
reference/API/drim2p/convert/: index.html
reference/API/drim2p/convert/raw/: index.html
reference/API/drim2p/deltaf/: index.html
reference/API/drim2p/deltaf/errors/: index.html
reference/API/drim2p/draw/: index.html
reference/API/drim2p/draw/roi/: index.html
reference/API/drim2p/extract/: index.html
reference/API/drim2p/extract/signal/: index.html
reference/API/drim2p/io/: index.html
reference/API/drim2p/io/errors/: index.html
reference/API/drim2p/io/raw/: index.html
reference/API/drim2p/logs/: index.html
reference/API/drim2p/models/: index.html
reference/API/drim2p/motion/: index.html
reference/API/drim2p/motion/correct/: index.html
search/: search_index.json
src/drim2p/: __about__.py  __init__.py  logging_.py  logs.py  models.py
src/drim2p/convert/: __init__.py  raw.py
src/drim2p/deltaf/: __init__.py  errors.py
src/drim2p/draw/: __init__.py  roi.py
src/drim2p/extract/: __init__.py  signal.py
src/drim2p/io/: __init__.py  errors.py  raw.py
src/drim2p/motion/: __init__.py  correct.py  qa.py
src/drim2p/report/: __init__.py
src/drim2p/report/templates/: base.html  motion_correction.html
tests/: conftest.py
tests/deltaf/: delta_f_test.py
tests/io/: test_io.py
tutorials/: index.html
tutorials/conversion-to-hdf5/: index.html
tutorials/dff-calculation/: index.html
tutorials/motion-correction/: index.html
tutorials/roi-drawing/: index.html
tutorials/signal-extraction-and-decontamination/: index.html
typical-workflow/: index.html
