[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drim2p"
dynamic = ["version"]
description = 'A dreamy 2-photon imaging processing pipeline.'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["2-photon", "two-photon", "imaging", "neuroscience", "processing"]
authors = [
  { name = "Olivier Delrée", email = "olivierdelree@protonmail.com" },
  { name = "Constantinos Eleftheriou", email = "Constantinos.Eleftheriou@ed.ac.uk" },
  { name = "Sophie Holland", email = "S.G.Holland@sms.ed.ac.uk" },
  { name = "Michelle Sanchez", email = "michelle.sr11@gmail.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "click",
  "dask",
  "duguidlab-motion-correction",  # SIMA fork
  "duguidlab-signal-separation",  # FISSA fork
  "h5py",
  "napari[all]",
  "numpy",
  "ome-types[lxml]",
  "pydantic",
]

[project.urls]
Documentation = "https://github.com/DuguidLab/drim2p#readme"
Issues = "https://github.com/DuguidLab/drim2p/issues"
Source = "https://github.com/DuguidLab/drim2p"

[project.scripts]
drim2p = "drim2p:drim2p"

[tool.hatch.version]
path = "src/drim2p/__about__.py"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
  { include-group = "types" },
]
docs = [
  "griffe-pydantic",
  "mkdocs",
  "mkdocs-caption",
  "mkdocs-click",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocs-section-index",
  "mkdocstrings-python",
]
test = [
  "pytest",
  "pytest-cov",
]
types = [
  "mypy[install-types, faster-cache, reports]",
]

[tool.hatch.envs.default]
path = ".venv"  # Use the environment provided by uv

[tool.hatch.envs.default.scripts]
docs-build-lax = "mkdocs build --clean"
docs-build = "docs-build-lax --strict"
docs-serve = "mkdocs serve --dev-addr localhost:8888"

test-run-coverage = "pytest --cov=src/drim2p --cov-report=term-missing:skip-covered --cov-report=html"
test-run-coverage-browser = "test-run-coverage; open htmlcov/index.html"
test-run = "test-run-coverage --no-cov"

types-check = "mypy --install-types --non-interactive {args:src/drim2p/ tests/}"
types-report = "types-check --html-report mypy-report/"

# `mypy` config
[tool.mypy]
strict = true
pretty = true
#allow_redefinition_new = true  # Enable when mypy 1.16 drops
allow_redefinition = true
warn_unreachable = true
show_error_code_links = true
untyped_calls_exclude = [
  "dask.array"
]

[[tool.mypy.overrides]]
module = [
  "h5py.*",
  "fissa.*",
  "napari.*",
  "sima.*",
]
ignore_missing_imports = true

# `coverage` config
[tool.coverage.run]
source_pkgs = ["drim2p", "tests"]
branch = true
parallel = true
omit = [
  "src/drim2p/__about__.py",
]

[tool.coverage.paths]
drim2p = ["src/drim2p", "*/drim2p/src/drim2p"]
tests = ["tests", "*/drim2p/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
